fixed number alignment

--- a/src/assets/scss/template/lotto-gopher.scss
+++ b/src/assets/scss/template/lotto-gopher.scss
@@ -584,6 +584,12 @@ table.button.success table a {
   }
 }
 
+.align-th-center {
+  th {
+    text-align: center;
+  }
+}
+
 .second-header {
   font-size: 24px;
   color: #333333;
